--- a/app/src/main/res/layout/activity_running.xml
+++ b/app/src/main/res/layout/activity_running.xml
@@ -16,7 +16,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/BlackMD"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:title="开始跑步"
+        app:title="跑步"
         app:layout_collapseMode="pin"
         app:popupTheme="@style/AppTheme.PopupOverlay">
     </android.support.v7.widget.Toolbar>
