--- a/app/src/main/res/layout/run_list_item.xml
+++ b/app/src/main/res/layout/run_list_item.xml
@@ -69,24 +69,18 @@
                     android:text="15:43" />
 
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:scaleX="0.6"
                     android:text="|" />
 
                 <TextView
-                    android:id="@+id/run_speed_text"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:scaleX="0.95"
-                    android:text="1.75" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:text="m/s" />
+                    android:id="@+id/run_mode_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
@@ -154,10 +148,10 @@
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="2dp"
                         android:layout_marginRight="2dp"
-                        android:src="@drawable/ic_energy" />
+                        android:src="@drawable/ic_steps" />
 
                     <TextView
-                        android:id="@+id/run_energy_text"
+                        android:id="@+id/run_steps_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="1px"
@@ -167,7 +161,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="千卡"
+                        android:text="步"
                         android:textSize="12sp" />
                 </LinearLayout>
 
