--- a/app/src/main/res/layout/run_list_item.xml
+++ b/app/src/main/res/layout/run_list_item.xml
@@ -40,6 +40,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/run_mode_img"
                     android:layout_width="18sp"
                     android:layout_height="18sp"
                     android:layout_marginBottom="2dp"
