--- a/app/src/main/res/layout/chart_view_layout.xml
+++ b/app/src/main/res/layout/chart_view_layout.xml
@@ -4,18 +4,20 @@
     android:id="@+id/chart_view_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="40dp"
     android:layout_marginBottom="40dp"
     android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp">
+    android:layout_marginRight="15dp"
+    android:layout_marginTop="40dp"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/data_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
-        android:layout_marginBottom="15dp" />
+        android:textColor="#FFF" />
 
     <lecho.lib.hellocharts.view.ColumnChartView
         android:id="@+id/column_chart"
