--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,7 +25,7 @@
         <attr name="NumberSize" format="dimension" />
     </declare-styleable>
 
-    <declare-styleable name="ImageNumberDisplay">
+    <declare-styleable name="ImageNumberDisplayView">
         <attr name="number" format="string" />
         <attr name="imageSrc" format="reference" />
         <attr name="unit" format="string"/>
