--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,23 +23,37 @@
             app:collapsedTitleTextAppearance="@style/CollapsedTitleText"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleGravity="left|top"
-            app:expandedTitleMarginTop="18dp"
             app:expandedTitleMarginStart="50dp"
+            app:expandedTitleMarginTop="18dp"
             app:expandedTitleTextAppearance="@style/ExpandedTitleText"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:statusBarScrim="@android:color/transparent">
 
-            <FrameLayout
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.6"
                 app:layout_scrollFlags="exitUntilCollapsed">
 
-                <include layout="@layout/chart_view_layout" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    app:layout_collapseParallaxMultiplier="1" />
 
-                <include layout="@layout/progress_view_layout" />
-            </FrameLayout>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <include layout="@layout/chart_view_layout" />
+
+                    <include layout="@layout/progress_view_layout" />
+                </RelativeLayout>
+            </LinearLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_main"
@@ -52,6 +66,7 @@
                     android:id="@+id/menu_button"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:src="@drawable/ic_home" />
 
@@ -62,7 +77,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="45dp"
             android:background="?attr/colorPrimary"
             app:tabIndicatorColor="#fff"
             app:tabMode="fixed"
