--- a/app/src/main/res/layout/chart_view_layout.xml
+++ b/app/src/main/res/layout/chart_view_layout.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/chart_view_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="40dp"
+    android:layout_marginBottom="5dp"
     android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:layout_marginTop="40dp"
-    android:orientation="vertical">
+    android:layout_marginRight="15dp">
 
     <TextView
         android:id="@+id/data_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_marginBottom="15dp"
         android:gravity="center"
         android:textColor="#FFF" />
 
     <lecho.lib.hellocharts.view.ColumnChartView
+        android:layout_marginTop="45dp"
         android:id="@+id/column_chart"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
-</LinearLayout>
+</RelativeLayout>
