--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -34,7 +34,7 @@
             android:layout_margin="15dp"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:src="@drawable/bear"/>
+            android:src="@drawable/ic_empty"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
