--- a/app/src/main/res/layout/friend_list_item.xml
+++ b/app/src/main/res/layout/friend_list_item.xml
@@ -1,7 +1,9 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="1dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackground"
@@ -22,7 +24,9 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_margin="10dp"
-                android:src="@drawable/photo" />
+                android:src="@drawable/photo"
+                android:transitionName="friend_profile"
+                tools:targetApi="lollipop" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -30,31 +34,49 @@
                 android:layout_gravity="center_vertical"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/friend_name_list_item"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="sail"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/friend_name_list_item"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#000"
+                        android:textSize="16sp"
+                        android:transitionName="friend_username"
+                        tools:targetApi="lollipop" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/online_flag_img"
+                        android:layout_width="12dp"
+                        android:layout_height="10dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/green"
+                        app:civ_border_color="#c1c1c1"
+                        app:civ_border_width="1dp" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/friend_des_list_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="共跑步5次，今日跑步0次。"
+                    android:text="今日跑步0次 | 总跑步次数5次"
                     android:textSize="13sp" />
 
             </LinearLayout>
         </LinearLayout>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_enter_blue"
-            android:layout_alignParentRight="true"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_margin="15dp"/>
+            android:layout_margin="15dp"
+            android:src="@drawable/ic_enter_blue" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
