--- a/app/src/main/res/menu/friend_activity_menu.xml
+++ b/app/src/main/res/menu/friend_activity_menu.xml
@@ -3,9 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/friend_menu2"
+        android:id="@+id/friend_refresh"
         android:icon="@drawable/ic_refresh"
         android:title="刷新"
         app:showAsAction="ifRoom" />
+
+        <item
+                android:id="@+id/friend_box"
+                android:icon="@drawable/ic_sms"
+                android:title="好友申请"
+                app:showAsAction="ifRoom" />
+
 
 </menu>
